force-app/main/default/objects/SBQQ__ProductOption__c/fields/CustomQuantity__c.field-meta.xml
<CustomField>
        <fullName>CustomQuantity__c</fullName>
        <label>Custom Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>