force-app/main/default/objects/SBQQ__ProductOption__c/fields/External_Sku_Concat__c.field-meta.xml
<CustomField>
        <fullName>External_Sku_Concat__c</fullName>
        <description>Unique Product Option External ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Product Option External ID.</inlineHelpText>
        <label>Product Option External  ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>