force-app/main/default/objects/SBQQ__ProductOption__c/fields/External_SKU_DH__c.field-meta.xml
<CustomField>
        <fullName>External_SKU_DH__c</fullName>
        <formula>SBQQ__OptionalSKU__r.External_SKU_DH_2_0__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External SKU (DH)</label>
        <type>Text</type>
    </CustomField>