force-app/main/default/objects/SBQQ__ProductOption__c/fields/License_Metric__c.field-meta.xml
<CustomField>
    <fullName>License_Metric__c</fullName>
    <label>License Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>License_Metrics</valueSetName>
    </valueSet>
</CustomField>