force-app/main/default/objects/SBQQ__ProductOption__c/fields/LM_Copy_2__c.field-meta.xml
<CustomField>
        <fullName>LM_Copy_2__c</fullName>
        <label>LM Copy 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Metrics</valueSetName>
        </valueSet>
    </CustomField>