force-app/main/default/objects/SBQQ__ProductOption__c/fields/LM_QTY_2__c.field-meta.xml
<CustomField>
        <fullName>LM_QTY_2__c</fullName>
        <label>LM QTY 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>