force-app/main/default/objects/SBQQ__ProductOption__c/fields/LM_QTY_Flag__c.field-meta.xml
<CustomField>
        <fullName>LM_QTY_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LM QTY Flag</label>
        <type>Checkbox</type>
    </CustomField>