force-app/main/default/objects/SBQQ__ProductOption__c/fields/Parent_Bundle_Name__c.field-meta.xml
<CustomField>
        <fullName>Parent_Bundle_Name__c</fullName>
        <formula>SBQQ__ConfiguredSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be used for data loading purposes. Displays the configured sku product name to set the bundle name picklist value.</inlineHelpText>
        <label>Parent Bundle Name</label>
        <type>Text</type>
    </CustomField>