force-app/main/default/objects/SBQQ__ProductOption__c/fields/Pass_Through_Product__c.field-meta.xml
<CustomField>
        <fullName>Pass_Through_Product__c</fullName>
        <description>Used to identify products that should not be visible during the quoting process.</description>
        <formula>IF(ISPICKVAL(SBQQ__QuoteLineVisibility__c, &quot;Never&quot;), &quot;Hide&quot;, &quot;Show&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to identify products that should not be visible during the quoting process.</inlineHelpText>
        <label>Pass Through Product</label>
        <type>Text</type>
    </CustomField>