force-app/main/default/objects/SBQQ__ProductOption__c/fields/ProdType__c.field-meta.xml
<CustomField>
    <fullName>ProdType__c</fullName>
    <description>This field contains the ProdType.</description>
    <formula>TEXT(SBQQ__OptionalSKU__r.ProdType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contains the ProdType.</inlineHelpText>
    <label>ProdType</label>
    <type>Text</type>
</CustomField>