force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
        <fullName>Product_Bundle__c</fullName>
        <inlineHelpText>Field used to capture bundle names in order to roll up to the quote line for output docs.</inlineHelpText>
        <label>Product Bundle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ActiveView: Teller Capture Bundle</fullName>
                </value>
                <value>
                    <fullName>Analytics Bundle</fullName>
                </value>
                <value>
                    <fullName>Card Payments Bundle</fullName>
                </value>
                <value>
                    <fullName>Content Management Bundle</fullName>
                </value>
                <value>
                    <fullName>Encore Bundle</fullName>
                </value>
                <value>
                    <fullName>EZTeller Bundle</fullName>
                </value>
                <value>
                    <fullName>Financial Management Bundle</fullName>
                </value>
                <value>
                    <fullName>Fusion CLS Bundle</fullName>
                </value>
                <value>
                    <fullName>MortgageBot Add On Modules Bundle</fullName>
                </value>
                <value>
                    <fullName>MortgageBot End to End Bundle</fullName>
                </value>
                <value>
                    <fullName>MortgageBot LOS Bundle</fullName>
                </value>
                <value>
                    <fullName>MortgageBot POS Bundle</fullName>
                </value>
                <value>
                    <fullName>Total Analytics Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>