force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Completeness__c.field-meta.xml
<CustomField>
        <fullName>Product_Completeness__c</fullName>
        <formula>SBQQ__OptionalSKU__r.Product_Completeness__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Completeness</label>
        <type>Text</type>
    </CustomField>