force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Option_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_External_ID__c</fullName>
    <description>Unique identifier for product options.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for product options.</inlineHelpText>
    <label>Product Option External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>