force-app/main/default/objects/SBQQ__ProductOption__c/fields/Product_Option_Version__c.field-meta.xml
<CustomField>
        <fullName>Product_Option_Version__c</fullName>
        <description>Indicates the version of the product catalog this came from.</description>
        <inlineHelpText>Indicates the version of the product catalog this came from.</inlineHelpText>
        <label>Product Option Version</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>