force-app/main/default/objects/SBQQ__ProductOption__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <description>This field contains the Product Option Optional SKU&#39;s License Metric.</description>
    <formula>TEXT(SBQQ__OptionalSKU__r.Revenue_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contains the Product Option Optional SKU&#39;s License Metric.</inlineHelpText>
    <label>Revenue Type</label>
    <type>Text</type>
</CustomField>