force-app/main/default/objects/SBQQ__ProductOption__c/fields/RR_Index__c.field-meta.xml
<CustomField>
    <fullName>RR_Index__c</fullName>
    <formula>if(ISBLANK(TEXT(RR_Edition__c)),
CASE(TEXT(RR_SubEdition__c),
  &quot;Base&quot;,1,
  &quot;Base+&quot;,2,1),
CASE(TEXT(RR_Edition__c),
  &quot;Base&quot;,1,
  &quot;Essential&quot;,2,
  &quot;Standard&quot;,3,
  &quot;Premium&quot;,4,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>