force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__AppliedImmediately__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates changes to this option should apply immediately.</description>
        <inlineHelpText>Select the checkbox to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Checkbox</type>
    </CustomField>