force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ComponentCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentCode__c</fullName>
        <description>Code for the component represented by this option. This is used in conjunction with the Configured Code Pattern field on the Product object.</description>
        <inlineHelpText>Code for the component represented by this option.</inlineHelpText>
        <label>Component Code</label>
        <length>60</length>
        <type>Text</type>
    </CustomField>