force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ComponentDescriptionPosition__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentDescriptionPosition__c</fullName>
        <description>Position of this component in the generated product description for the configuration.</description>
        <inlineHelpText>Position of this component in the generated product description for the configuration.</inlineHelpText>
        <label>Component Description Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>