force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ConfiguredSKU__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product SKU of the bundle that is being configured with this option. If you create the option from the product detail page, this should already be populated.</description>
        <inlineHelpText>Product SKU of the bundle that is being configured with this option. If you create the option from the product detail page, this should already be populated.</inlineHelpText>
        <label>Configured SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </CustomField>