force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__DiscountedByPackage__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that quote lines generated from this component should pick up additional discount from the parent package line. Only percentage based discount can be inherited.</description>
        <inlineHelpText>Check to automatically apply additional discount from parent package to this component. Only percentage-based discount can be applied.</inlineHelpText>
        <label>Discounted By Package</label>
        <type>Checkbox</type>
    </CustomField>