force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__DiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be applied to the product selected by this option. This discount schedule overrides the discount schedule selected on the product or feature.</description>
        <inlineHelpText>Lookup the discount schedule to be applied to the product selected by this option. This discount schedule overrides the discount schedule selected on the product or feature.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </CustomField>