force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ExistingQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ExistingQuantity__c</fullName>
        <description>Existing quantity of this product. Computed by looking at the assets attached to the account.</description>
        <inlineHelpText>Existing quantity of this product. Computed by looking at the assets attached to the account.</inlineHelpText>
        <label>Existing Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>