force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Feature__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature that selects this option.</description>
        <inlineHelpText>Enter or lookup the feature that includes this option. This will be dependent on the Configured SKU.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ConfiguredSKU__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductFeature__c.SBQQ__ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </CustomField>