force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__MaxQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MaxQuantity__c</fullName>
        <description>Maximum quantity allowed for this option.</description>
        <inlineHelpText>Maximum quantity allowed for this option.</inlineHelpText>
        <label>Max Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>