force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__MinQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MinQuantity__c</fullName>
        <description>Minimum quantity allowed for this option.</description>
        <inlineHelpText>Minimum quantity allowed for this option.</inlineHelpText>
        <label>Min Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>