force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Number__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Number__c</fullName>
        <description>Sequential number that determines this option&apos;s sort order.</description>
        <inlineHelpText>Set the display order of this option within the feature it&apos;s assigned to.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>