force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__OptionalSKU__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OptionalSKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product SKU added if this option is selected.</description>
        <inlineHelpText>Enter or lookup the product SKU that should be added when this product is selected.</inlineHelpText>
        <label>Optional SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Optional For</relationshipLabel>
        <relationshipName>OptionalFor</relationshipName>
        <type>Lookup</type>
    </CustomField>