force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ProductCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductCode__c</fullName>
        <description>Product Code for the optional product SKU.</description>
        <formula>SBQQ__OptionalSKU__r.ProductCode</formula>
        <inlineHelpText>Product Code for the optional product SKU.</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </CustomField>