force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ProductConfigurationType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductConfigurationType__c</fullName>
        <description>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__ConfigurationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the value of Configuration Type on Product object in order to avoid loading related product record.</inlineHelpText>
        <label>Product Configuration Type</label>
        <type>Text</type>
    </CustomField>