force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ProductDescription__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductDescription__c</fullName>
        <description>Description for the optional SKU.</description>
        <formula>SBQQ__OptionalSKU__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Description for the optional SKU.</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </CustomField>