force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ProductFamily__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductFamily__c</fullName>
        <description>Product Family for the optional product SKU.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.Family)</formula>
        <inlineHelpText>Product Family for the optional product SKU.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </CustomField>