force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ProductName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Name for the optional SKU.</description>
        <formula>SBQQ__OptionalSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name for the optional SKU.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </CustomField>