force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ProductQuantityScale__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductQuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <formula>SBQQ__OptionalSKU__r.SBQQ__QuantityScale__c</formula>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Product Quantity Scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>