force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__ProductSubscriptionPricing__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductSubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
        <formula>TEXT(SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
        <label>Product Subscription Pricing</label>
        <type>Text</type>
    </CustomField>