force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__RenewalProductOption__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewalProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that replaces this product option on renewal.</description>
        <inlineHelpText>Product option that replaces this product option on renewal. Use this to quote a different SKU when renewing.</inlineHelpText>
        <label>Renewal Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Product Options</relationshipLabel>
        <relationshipName>ProductOptions</relationshipName>
        <type>Lookup</type>
    </CustomField>