force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Required__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this component is required or not.</description>
        <inlineHelpText>Select the checkbox if this product is required on the bundle.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </CustomField>