force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Selected__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this option should be selected by default.</description>
        <inlineHelpText>Select the checkbox if this product option should be automatically selected by default.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </CustomField>