force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__SubscriptionScope__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionScope__c</fullName>
        <description>Specifies percent of total calculation scope for percent of total priced products added as product options.</description>
        <inlineHelpText>Choose how this percent of total product option is calculated. Package is specific to the parent product. Components is specific to sibling components. Both is specific to the parent and sibling components.</inlineHelpText>
        <label>Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>